Update translation - 104415186 (#3623) 7e4e61b2a7ddaeec668bd9c89308f0875b8441e3

--- a/ar/workers/index.html
+++ b/ar/workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>العاملون</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;2:45 م الساعة 23 فبراير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;9:52 ص الساعة 10 مارس 2021</p>
           
         </div>
       </div>
@@ -269,7 +269,7 @@
 
 
 
-<ul><li>راجع <a href="https://files.covid19.ca.gov/pdf/guidance-support-working-families--ar.pdf">الدعم الموجه للعائلات العاملة (PDF)</a> للحصول على معلومات تساعدك على اختيار مكان لرعاية طفلك، والعثور على مساعدات لدفع تكاليف رعاية طفلك، وربطك بالمزيد من وسائل الدعم لأسرتك.</li><li>قم بزيارة صفحة <a href="/ar/childcare/">رعاية الطفل</a> لمعرفة المزيد عن خيارات رعاية الطفل القريبة منك.</li></ul>
+<ul><li>راجع <a href="https://files.covid19.ca.gov/pdf/guidance-support-working-families--ar.pdf">الدعم الموجه للعائلات العاملة</a> للحصول على معلومات تساعدك على اختيار مكان لرعاية طفلك، والعثور على مساعدات لدفع تكاليف رعاية طفلك، وربطك بالمزيد من وسائل الدعم لأسرتك.</li><li>قم بزيارة صفحة <a href="/ar/childcare/">رعاية الطفل</a> لمعرفة المزيد عن خيارات رعاية الطفل القريبة منك.</li></ul>
 
 
 
@@ -673,14 +673,7 @@
 
 
 
-<ul><li>وكالة تنمية القوى العاملة والعمل بكاليفورنيا: <a href="https://www.labor.ca.gov/coronavirus2019/">موارد فيروس كورونا 2019 (كوفيد-19) لأصحاب العمل والعاملين</a></li><li>إدارة تطوير التوظيف بكاليفورنيا:<a href="https://www.edd.ca.gov/about_edd/coronavirus-2019.htm"> فيروس كورونا (كوفيد-19) 2019</a></li><li><a href="https://www.dir.ca.gov/dosh/coronavirus/Health-Care-General-Industry.html">توجيهات وموارد كاليفورنيا/إدارة السلامة والصحة المهنية (Cal/OSHA)</a></li><li><a href="https://www.dir.ca.gov/dlse/2019-Novel-Coronavirus.htm">مرض فيروس كورونا (كوفيد-19) – الأسئلة الشائعة حول القوانين التي يطبقها مكتب مفوض العمل بكاليفورنيا</a></li><li><a href="https://www.dir.ca.gov/dlse/Essential-and-Non-essential-Workers.htm">تحديث حول الموظفين الذين يعملون بوظائف ضروروية ووظائف غير ضرورية</a></li><li>إدارة التوظيف والإسكان العادل بكاليفورنيا: <a href="https://www.dfeh.ca.gov/covid-19-resources-and-guidance/">موارد وإرشادات كوفيد 19</a></li><li>إدارة كاليفورنيا للعلاقات الصناعية: <a href="https://www.dir.ca.gov/dwc/Covid-19/Index.html">الموارد الخاصة بكوفيد-19 وتعويض العاملين</a></li><li>وزارة العمل الأمريكية: <a href="https://www.dol.gov/agencies/whd/ffcra">الإجازات المدفوعة الأجر بموجب قانون التصدي لفيروس كورونا العائلي الأول (Families First Coronavirus Response Act)</a></li><li>إدارة الصحة العامة بولاية كاليفورنيا: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">إرشادات الحجر الصحي لمرضى كوفيد-19</a></li><li>إرشادات الحجر الصحي: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/ab685.aspx">AB 685 متطلبات الإبلاغ عن تفشي فيروس كوفيد-19 في أماكن العمل</a></li></ul>
-
-
-<p><!--EndFragment--></p>
-
-
-<p></p>
-</div>
+<ul><li>وكالة تنمية القوى العاملة والعمل بكاليفورنيا: <a href="https://www.labor.ca.gov/coronavirus2019/">موارد فيروس كورونا 2019 (كوفيد-19) لأصحاب العمل والعاملين</a></li><li>إدارة تطوير التوظيف بكاليفورنيا:<a href="https://www.edd.ca.gov/about_edd/coronavirus-2019.htm"> فيروس كورونا (كوفيد-19) 2019</a></li><li><a href="https://www.dir.ca.gov/dosh/coronavirus/Health-Care-General-Industry.html">توجيهات وموارد كاليفورنيا/إدارة السلامة والصحة المهنية (Cal/OSHA)</a></li><li><a href="https://www.dir.ca.gov/dlse/2019-Novel-Coronavirus.htm">مرض فيروس كورونا (كوفيد-19) – الأسئلة الشائعة حول القوانين التي يطبقها مكتب مفوض العمل بكاليفورنيا</a></li><li><a href="https://www.dir.ca.gov/dlse/Essential-and-Non-essential-Workers.htm">تحديث حول الموظفين الذين يعملون بوظائف ضروروية ووظائف غير ضرورية</a></li><li>إدارة التوظيف والإسكان العادل بكاليفورنيا: <a href="https://www.dfeh.ca.gov/covid-19-resources-and-guidance/">موارد وإرشادات كوفيد 19</a></li><li>إدارة كاليفورنيا للعلاقات الصناعية: <a href="https://www.dir.ca.gov/dwc/Covid-19/Index.html">الموارد الخاصة بكوفيد-19 وتعويض العاملين</a></li><li>وزارة العمل الأمريكية: <a href="https://www.dol.gov/agencies/whd/ffcra">الإجازات المدفوعة الأجر بموجب قانون التصدي لفيروس كورونا العائلي الأول (Families First Coronavirus Response Act)</a></li><li>إدارة الصحة العامة بولاية كاليفورنيا: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">إرشادات الحجر الصحي لمرضى كوفيد-19</a></li><li>إرشادات الحجر الصحي: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/ab685.aspx">AB 685 متطلبات الإبلاغ عن تفشي فيروس كوفيد-19 في أماكن العمل</a></li></ul>    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/44834.js" async="true" charset="utf-8"></script> </div>
     </div>
   </div>
   <!-- end contentBlock -->
