--- a/es/workers/index.html
+++ b/es/workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Trabajadores</h1>
           
-            <p class="small-text">Última actualización&nbsp;23 de febrero de 2021 a las 2:45 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;10 de marzo de 2021 a las 9:52 a. m.</p>
           
         </div>
       </div>
@@ -269,7 +269,7 @@
 
 
 
-<ul><li>Consulte en el <a href="https://files.covid19.ca.gov/pdf/guidance-support-working-families--es.pdf">apoyo para familias trabajadoras (PDF)</a> información para ayudarle a ubicar el cuidado infantil, encontrar asistencia para pagar el cuidado infantil y ponerse en contacto con apoyos adicionales para su familia.</li><li>Visite la página de <a href="/es/childcare/">cuidado infantil</a> para obtener más información sobre las opciones de cuidado de niños cerca de usted.</li></ul>
+<ul><li>Consulte en el <a href="https://files.covid19.ca.gov/pdf/guidance-support-working-families--es.pdf">apoyo para familias trabajadoras</a> información para ayudarle a ubicar el cuidado infantil, encontrar asistencia para pagar el cuidado infantil y ponerse en contacto con apoyos adicionales para su familia.</li><li>Visite la página de <a href="/es/childcare/">cuidado infantil</a> para obtener más información sobre las opciones de cuidado de niños cerca de usted.</li></ul>
 
 
 
@@ -673,14 +673,7 @@
 
 
 
-<ul><li>Agencia de Desarrollo de la Fuerza de Trabajo y el Empleo: <a href="https://www.labor.ca.gov/coronavirus2019/">Recursos para empleados y trabajadores sobre el coronavirus 2019 (COVID-19)</a></li><li>Departamento de Desarrollo del Empleo de California: <a href="https://www.edd.ca.gov/about_edd/coronavirus-2019.htm">Coronavirus 2019 (COVID-19)</a></li><li><a href="https://www.dir.ca.gov/dosh/coronavirus/Health-Care-General-Industry.html">Orientación y recursos sobre la COVID-19 de la Administración de Seguridad y Salud Ocupacional (Occupational Safety and Health Administration, OSHA) de California.</a></li><li><a href="https://www.dir.ca.gov/dlse/2019-Novel-Coronavirus.htm">Enfermedad por el coronavirus (COVID-19): Preguntas frecuentes sobre la aplicación de leyes por la Oficina del Comisionado del Trabajo de California</a></li><li><a href="https://www.dir.ca.gov/dlse/Essential-and-Non-essential-Workers.htm">Información actualizada sobre trabajadores esenciales y no esenciales</a></li><li>Departamento de Empleo y Vivienda Justos de California: <a href="https://www.dfeh.ca.gov/covid-19-resources-and-guidance/">recursos y orientación sobre COVID-19</a></li><li>Departamento de Relaciones Industriales de California: <a href="https://www.dir.ca.gov/dwc/Covid-19/Index.html">recursos sobre COVID-19 y Compensación de Trabajadores</a></li><li>Departamento de Trabajo de los EE. UU.: <a href="https://www.dol.gov/agencies/whd/ffcra">licencias remuneradas contempladas en la Ley Las Familias Primero en la Respuesta al Coronavirus</a></li><li>Departamento de Salud Pública de California: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">guía sobre la cuarentena de la COVID-19</a></li><li>Departamento de Salud Pública de California: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/ab685.aspx">Requisitos de notificación de brotes en el lugar de trabajo AB 685 COVID-19</a></li></ul>
-
-
-<p><!--EndFragment--></p>
-
-
-<p></p>
-</div>
+<ul><li>Agencia de Desarrollo de la Fuerza de Trabajo y el Empleo: <a href="https://www.labor.ca.gov/coronavirus2019/">Recursos para empleados y trabajadores sobre el coronavirus 2019 (COVID-19)</a></li><li>Departamento de Desarrollo del Empleo de California: <a href="https://www.edd.ca.gov/about_edd/coronavirus-2019.htm">Coronavirus 2019 (COVID-19)</a></li><li><a href="https://www.dir.ca.gov/dosh/coronavirus/Health-Care-General-Industry.html">Orientación y recursos sobre la COVID-19 de la Administración de Seguridad y Salud Ocupacional (Occupational Safety and Health Administration, OSHA) de California.</a></li><li><a href="https://www.dir.ca.gov/dlse/2019-Novel-Coronavirus.htm">Enfermedad por el coronavirus (COVID-19): Preguntas frecuentes sobre la aplicación de leyes por la Oficina del Comisionado del Trabajo de California</a></li><li><a href="https://www.dir.ca.gov/dlse/Essential-and-Non-essential-Workers.htm">Información actualizada sobre trabajadores esenciales y no esenciales</a></li><li>Departamento de Empleo y Vivienda Justos de California: <a href="https://www.dfeh.ca.gov/covid-19-resources-and-guidance/">recursos y orientación sobre COVID-19</a></li><li>Departamento de Relaciones Industriales de California: <a href="https://www.dir.ca.gov/dwc/Covid-19/Index.html">recursos sobre COVID-19 y Compensación de Trabajadores</a></li><li>Departamento de Trabajo de los EE. UU.: <a href="https://www.dol.gov/agencies/whd/ffcra">licencias remuneradas contempladas en la Ley Las Familias Primero en la Respuesta al Coronavirus</a></li><li>Departamento de Salud Pública de California: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">guía sobre la cuarentena de la COVID-19</a></li><li>Departamento de Salud Pública de California: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/ab685.aspx">Requisitos de notificación de brotes en el lugar de trabajo AB 685 COVID-19</a></li></ul>    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/44834.js" async="true" charset="utf-8"></script> </div>
     </div>
   </div>
   <!-- end contentBlock -->
