--- a/ko/workers/index.html
+++ b/ko/workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>근로자</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 23일 오후 2:45</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 10일 오전 9:52</p>
           
         </div>
       </div>
@@ -269,7 +269,7 @@
 
 
 
-<ul><li>여러분이 보육 시설을 찾고 보육비 지원을 확인하며 여러분 가족에게 제공되는 추가 지원을 이용하는데 도움이 되는 정보는 <a href="https://files.covid19.ca.gov/pdf/guidance-support-working-families--ko.pdf">근로자 가족을 위한 지원(PDF)</a>에서 확인하십시오.</li><li>선택 가능한 근처의 보육 시설에 관한 더 자세한 사항은 <a href="/ko/childcare/">보육 시설</a> 페이지에서 확인하십시오.</li></ul>
+<ul><li>보육 시설을 찾고 보육비 지원을 확인하며 가족을 위한 추가 지원을 이용하는데 도움이 되는 정보는 <a href="https://files.covid19.ca.gov/pdf/guidance-support-working-families--ko.pdf">근로자 가족을 위한 지원</a>에서 확인하십시오.</li><li>선택 가능한 근처의 보육 시설에 관한 더 자세한 사항은 <a href="/ko/childcare/">보육 시설</a> 페이지에서 확인하십시오.</li></ul>
 
 
 
@@ -673,14 +673,7 @@
 
 
 
-<ul><li>캘리포니아 노동 인력 개발원(CA Labor and Workforce Development Agency): <a href="https://www.labor.ca.gov/coronavirus2019/">코로나바이러스 감염증 2019(COVID-19) 고용주와 근로자를 위한 자원 정보</a></li><li>캘리포니아 고용 개발 사무국(CA Employment Development Department): <a href="https://www.edd.ca.gov/about_edd/coronavirus-2019.htm">코로나바이러스 감염증 2019(COVID-19)</a></li><li><a href="https://www.dir.ca.gov/dosh/coronavirus/Health-Care-General-Industry.html">캘리포니아 산업 안전 보건국(Cal/Occupational Safety and Health Administration, Cal/OSHA) COVID-19 지침 및 자원</a></li><li><a href="https://www.dir.ca.gov/dlse/2019-Novel-Coronavirus.htm">코로나바이러스 감염증(COVID-19) – 캘리포니아 노동청장실(California Labor Commissioner’s Office) 집행 관련법에 대해 자주하는 질문</a></li><li><a href="https://www.dir.ca.gov/dlse/Essential-and-Non-essential-Workers.htm">필수 근로자 및 비필수 근로자에 대한 업데이트 사항</a></li><li>캘리포니아 주 공정 고용 주택부: <a href="https://www.dfeh.ca.gov/covid-19-resources-and-guidance/">COVID-19 자원 및 지침서</a></li><li>캘리포니아 주 산업관계부(CA Department of Industrial Relations): <a href="https://www.dir.ca.gov/dwc/Covid-19/Index.html">COVID-19 자원 및 산업 재해 보험</a></li><li>미국 노동부(U.S. Department of Labor): <a href="https://www.dol.gov/agencies/whd/ffcra">가족 우선 코로나바이러스 대응법</a></li><li>캘리포니아 공중보건부: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">COVID-19 자가 격리 지침</a></li><li>캘리포니아 공중보건부: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/ab685.aspx">AB 685 COVID-19 직장 내 발병 보고 요건</a></li></ul>
-
-
-<p><!--EndFragment--></p>
-
-
-<p></p>
-</div>
+<ul><li>캘리포니아 노동 인력 개발원(CA Labor and Workforce Development Agency): <a href="https://www.labor.ca.gov/coronavirus2019/">코로나바이러스 감염증 2019(COVID-19) 고용주와 근로자를 위한 자원 정보</a></li><li>캘리포니아 고용 개발 사무국(CA Employment Development Department): <a href="https://www.edd.ca.gov/about_edd/coronavirus-2019.htm">코로나바이러스 감염증 2019(COVID-19)</a></li><li><a href="https://www.dir.ca.gov/dosh/coronavirus/Health-Care-General-Industry.html">캘리포니아 산업 안전 보건국(Cal/Occupational Safety and Health Administration, Cal/OSHA) COVID-19 지침 및 자원</a></li><li><a href="https://www.dir.ca.gov/dlse/2019-Novel-Coronavirus.htm">코로나바이러스 감염증(COVID-19) – 캘리포니아 노동청장실(California Labor Commissioner’s Office) 집행 관련법에 대해 자주하는 질문</a></li><li><a href="https://www.dir.ca.gov/dlse/Essential-and-Non-essential-Workers.htm">필수 근로자 및 비필수 근로자에 대한 업데이트 사항</a></li><li>캘리포니아 주 공정 고용 주택부: <a href="https://www.dfeh.ca.gov/covid-19-resources-and-guidance/">COVID-19 자원 및 지침서</a></li><li>캘리포니아 주 산업관계부(CA Department of Industrial Relations): <a href="https://www.dir.ca.gov/dwc/Covid-19/Index.html">COVID-19 자원 및 산업 재해 보험</a></li><li>미국 노동부(U.S. Department of Labor): <a href="https://www.dol.gov/agencies/whd/ffcra">가족 우선 코로나바이러스 대응법</a></li><li>캘리포니아 공중보건부: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">COVID-19 자가 격리 지침</a></li><li>캘리포니아 공중보건부: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/ab685.aspx">AB 685 COVID-19 직장 내 발병 보고 요건</a></li></ul>    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/44834.js" async="true" charset="utf-8"></script> </div>
     </div>
   </div>
   <!-- end contentBlock -->
