--- a/vi/workers/index.html
+++ b/vi/workers/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Người Lao Động</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;23 tháng 2, 2021 lúc 14:45</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;10 tháng 3, 2021 lúc 9:52</p>
           
         </div>
       </div>
@@ -267,11 +267,11 @@
 
 
 
-<h2 id="working-parents">Hỗ trợ dành cho cha mẹ của người lao động</h2>
+<h2 id="working-parents">Hỗ trợ dành cho người lao động có con nhỏ</h2>
 
 
 
-<ul><li>Xem mục <a href="https://files.covid19.ca.gov/pdf/guidance-support-working-families--vi.pdf">hỗ trợ cho các gia đình lao động (PDF)</a> để biết thông tin nhằm giúp quý vị xác định các địa điểm chăm sóc trẻ em, tìm kiếm sự trợ giúp để thanh toán cho dịch vụ chăm sóc trẻ em và kết nối quý vị với các nguồn lực hỗ trợ bổ sung cho gia đình quý vị.</li><li>Hãy truy cập trang <a href="/vi/childcare/">Chăm Sóc Trẻ Em</a> để tìm hiểu thêm về các lựa chọn chăm sóc trẻ em gần nơi quý vị sinh sống.</li></ul>
+<ul><li>Hãy xem <a href="https://files.covid19.ca.gov/pdf/guidance-support-working-families--vi.pdf">hỗ trợ cho các gia đình lao động</a> để có thông tin giúp quý vị xác định địa điểm các dịch vụ chăm sóc trẻ em, tìm kiếm sự trợ giúp để thanh toán cho các dịch vụ chăm sóc trẻ em và kết nối quý vị với các nguồn lực hỗ trợ khác cho gia đình quý vị.</li><li>Hãy truy cập trang <a href="/vi/childcare/">Chăm Sóc Trẻ Em</a> để tìm hiểu thêm về các lựa chọn chăm sóc trẻ em gần nơi quý vị sinh sống.</li></ul>
 
 
 
@@ -675,14 +675,7 @@
 
 
 
-<ul><li>Cơ Quan Phát Triển Nhân Lực và Lao Động California: <a href="https://www.labor.ca.gov/coronavirus2019/">Nguồn Lực dành cho Người Lao Động và Chủ Hãng Thời Vi-rút Corona 2019 (COVID-19)</a></li><li>Phòng Phát Triển Việc Làm California (CA): <a href="https://www.edd.ca.gov/about_edd/coronavirus-2019.htm">Vi-rút Corona 2019 (COVID-19)</a></li><li><a href="https://www.dir.ca.gov/dosh/coronavirus/Health-Care-General-Industry.html">Hướng Dẫn và Nguồn Lực Trợ Giúp Trong Đại Dịch COVID-19 của Cal/OSHA</a></li><li><a href="https://www.dir.ca.gov/dlse/2019-Novel-Coronavirus.htm">Bệnh Dịch Do Vi-rút Corona (COVID-19) – Các câu hỏi thường gặp về những luật được thực thi bởi Văn Phòng Ủy Viên Lao Động California</a></li><li><a href="https://www.dir.ca.gov/dlse/Essential-and-Non-essential-Workers.htm">Cập Nhật về Người Lao Động Trong Ngành Nghề Thiết Yếu và Không Thiết Yếu</a></li><li>Sở Nhà Ở và Việc Làm Công Bằng CA: <a href="https://www.dfeh.ca.gov/covid-19-resources-and-guidance/">Hướng Dẫn và Nguồn Lực Trong Đại Dịch COVID-19</a></li><li>Sở Quan Hệ Công Nghiệp CA: <a href="https://www.dir.ca.gov/dwc/Covid-19/Index.html">Bồi Thường Cho Người Lao Động và Nguồn Lực Trong Đại Dịch COVID-19</a></li><li>Bộ Lao Động Hoa Kỳ: <a href="https://www.dol.gov/agencies/whd/ffcra">Chính Sách Nghỉ Phép Có Lương theo Đạo Luật Gia Đình Là Ưu Tiên Cao Nhất Khi Ứng Phó Với Đại Dịch Vi-rút Corona</a></li><li>Sở Y Tế Công Cộng CA: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">Hướng Dẫn Cách Ly Kiểm Dịch Trong Đại Dịch COVID-19</a></li><li>Sở Y Tế Công Cộng CA: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/ab685.aspx">AB 685 Các Yêu Cầu Thông Báo Bùng Phát COVID-19 Tại Nơi Làm Việc</a></li></ul>
-
-
-<p><!--EndFragment--></p>
-
-
-<p></p>
-</div>
+<ul><li>Cơ Quan Phát Triển Nhân Lực và Lao Động California: <a href="https://www.labor.ca.gov/coronavirus2019/">Nguồn Lực dành cho Người Lao Động và Chủ Hãng Thời Vi-rút Corona 2019 (COVID-19)</a></li><li>Phòng Phát Triển Việc Làm California (CA): <a href="https://www.edd.ca.gov/about_edd/coronavirus-2019.htm">Vi-rút Corona 2019 (COVID-19)</a></li><li><a href="https://www.dir.ca.gov/dosh/coronavirus/Health-Care-General-Industry.html">Hướng Dẫn và Nguồn Lực Trợ Giúp Trong Đại Dịch COVID-19 của Cal/OSHA</a></li><li><a href="https://www.dir.ca.gov/dlse/2019-Novel-Coronavirus.htm">Bệnh Dịch Do Vi-rút Corona (COVID-19) – Các câu hỏi thường gặp về những luật được thực thi bởi Văn Phòng Ủy Viên Lao Động California</a></li><li><a href="https://www.dir.ca.gov/dlse/Essential-and-Non-essential-Workers.htm">Cập Nhật về Người Lao Động Trong Ngành Nghề Thiết Yếu và Không Thiết Yếu</a></li><li>Sở Nhà Ở và Việc Làm Công Bằng CA: <a href="https://www.dfeh.ca.gov/covid-19-resources-and-guidance/">Hướng Dẫn và Nguồn Lực Trong Đại Dịch COVID-19</a></li><li>Sở Quan Hệ Công Nghiệp CA: <a href="https://www.dir.ca.gov/dwc/Covid-19/Index.html">Bồi Thường Cho Người Lao Động và Nguồn Lực Trong Đại Dịch COVID-19</a></li><li>Bộ Lao Động Hoa Kỳ: <a href="https://www.dol.gov/agencies/whd/ffcra">Chính Sách Nghỉ Phép Có Lương theo Đạo Luật Gia Đình Là Ưu Tiên Cao Nhất Khi Ứng Phó Với Đại Dịch Vi-rút Corona</a></li><li>Sở Y Tế Công Cộng CA: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">Hướng Dẫn Cách Ly Kiểm Dịch Trong Đại Dịch COVID-19</a></li><li>Sở Y Tế Công Cộng CA: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/ab685.aspx">AB 685 Các Yêu Cầu Thông Báo Bùng Phát COVID-19 Tại Nơi Làm Việc</a></li></ul>    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/44834.js" async="true" charset="utf-8"></script> </div>
     </div>
   </div>
   <!-- end contentBlock -->
