--- a/tl/workers/index.html
+++ b/tl/workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga Manggagawa</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Pebrero 23, 2021 sa 2:45 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 10, 2021 sa 9:52 AM</p>
           
         </div>
       </div>
@@ -269,7 +269,7 @@
 
 
 
-<ul><li>Tingnan ang <a href="https://files.covid19.ca.gov/pdf/guidance-support-working-families--tl.pdf">suporta para sa mga nagtatrabahong pamilya (PDF)</a> para sa impormasyong makakatulong sa iyong maghanap ng pangangalaga ng bata, maghanap ng tulong sa pagbabayad ng pangangalaga ng bata, at nag-uugnay sa iyo sa mga karagdagang suporta para sa iyong pamilya.</li><li>Bisitahin ang page na <a href="/tl/childcare/">Pangangalaga ng Bata</a> para matuto pa tungkol sa mga opsyon sa pangangalaga ng bata, na malapit sa iyo.</li></ul>
+<ul><li>Tingnan ang <a href="https://files.covid19.ca.gov/pdf/guidance-support-working-families--tl.pdf">suporta para sa mga nagtatrabahong pamilya</a> para sa impormasyong makakatulong sa iyong maghanap ng pangangalaga ng bata, maghanap ng tulong sa pagbabayad ng pangangalaga ng bata, at nag-uugnay sa iyo sa mga karagdagang suporta para sa iyong pamilya.</li><li>Bisitahin ang page na <a href="/tl/childcare/">Pangangalaga ng Bata</a> para matuto pa tungkol sa mga opsyon sa pangangalaga ng bata, na malapit sa iyo.</li></ul>
 
 
 
@@ -673,14 +673,7 @@
 
 
 
-<ul><li>CA Labor and Workforce Development Agency: <a href="https://www.labor.ca.gov/coronavirus2019/">Mga Madudulugan para sa Coronavirus 2019 (COVID-19) para sa Mga Employer at Manggagawa</a></li><li>CA Employment Development Department: <a href="https://www.edd.ca.gov/about_edd/coronavirus-2019.htm">Coronavirus 2019 (COVID-19)</a></li><li><a href="https://www.dir.ca.gov/dosh/coronavirus/Health-Care-General-Industry.html">Gabay at Mga Mapagkukunan para sa COVID-19 ng Cal/OSHA</a></li><li><a href="https://www.dir.ca.gov/dlse/2019-Novel-Coronavirus.htm">Sakit na Coronavirus (COVID-19) – Mga FAQ tungkol sa mga batas na ipinatupad ng Labor Commissioner’s Office ng California</a></li><li><a href="https://www.dir.ca.gov/dlse/Essential-and-Non-essential-Workers.htm">Update sa Mahahalaga at Hindi Mahahalagang Manggagawa</a></li><li>Departamento sa Patas na Trabaho at Pabahay ng CA: <a href="https://www.dfeh.ca.gov/covid-19-resources-and-guidance/">Mga Mapagkukunan at Gabay para sa COVID-19</a></li><li>Departamento sa Mga Ugnayan sa Industriya ng CA: <a href="https://www.dir.ca.gov/dwc/Covid-19/Index.html">Mga Mapagkukunan para sa COVID-19 at Bayad-pinsala sa Mga Manggagawa</a></li><li>U.S. Department of Labor: <a href="https://www.dol.gov/agencies/whd/ffcra">Bayad na Leave sa Ilalim ng Families First Coronavirus Response Act</a></li><li>CA Department of Public Health: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">Gabay sa Pag-quarantine sa Panahon ng COVID-19</a></li><li>CA Department of Public Health: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/ab685.aspx">AB 685 Mga Ipinag-aatas sa Pag-uulat sa Oubreak ng COVID-19 sa Trabaho</a></li></ul>
-
-
-<p><!--EndFragment--></p>
-
-
-<p></p>
-</div>
+<ul><li>CA Labor and Workforce Development Agency: <a href="https://www.labor.ca.gov/coronavirus2019/">Mga Madudulugan para sa Coronavirus 2019 (COVID-19) para sa Mga Employer at Manggagawa</a></li><li>CA Employment Development Department: <a href="https://www.edd.ca.gov/about_edd/coronavirus-2019.htm">Coronavirus 2019 (COVID-19)</a></li><li><a href="https://www.dir.ca.gov/dosh/coronavirus/Health-Care-General-Industry.html">Gabay at Mga Mapagkukunan para sa COVID-19 ng Cal/OSHA</a></li><li><a href="https://www.dir.ca.gov/dlse/2019-Novel-Coronavirus.htm">Sakit na Coronavirus (COVID-19) – Mga FAQ tungkol sa mga batas na ipinatupad ng Labor Commissioner’s Office ng California</a></li><li><a href="https://www.dir.ca.gov/dlse/Essential-and-Non-essential-Workers.htm">Update sa Mahahalaga at Hindi Mahahalagang Manggagawa</a></li><li>Departamento sa Patas na Trabaho at Pabahay ng CA: <a href="https://www.dfeh.ca.gov/covid-19-resources-and-guidance/">Mga Mapagkukunan at Gabay para sa COVID-19</a></li><li>Departamento sa Mga Ugnayan sa Industriya ng CA: <a href="https://www.dir.ca.gov/dwc/Covid-19/Index.html">Mga Mapagkukunan para sa COVID-19 at Bayad-pinsala sa Mga Manggagawa</a></li><li>U.S. Department of Labor: <a href="https://www.dol.gov/agencies/whd/ffcra">Bayad na Leave sa Ilalim ng Families First Coronavirus Response Act</a></li><li>CA Department of Public Health: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">Gabay sa Pag-quarantine sa Panahon ng COVID-19</a></li><li>CA Department of Public Health: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/ab685.aspx">AB 685 Mga Ipinag-aatas sa Pag-uulat sa Oubreak ng COVID-19 sa Trabaho</a></li></ul>    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/44834.js" async="true" charset="utf-8"></script> </div>
     </div>
   </div>
   <!-- end contentBlock -->
