--- a/zh-hans/workers/index.html
+++ b/zh-hans/workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>工作者</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年2月23日, 下午2:45</p>
+            <p class="small-text">最后更新时间&nbsp;2021年3月10日, 上午9:52</p>
           
         </div>
       </div>
@@ -269,7 +269,7 @@
 
 
 
-<ul><li>请查看<a href="https://files.covid19.ca.gov/pdf/guidance-support-working-families--zh-hans.pdf">为工薪家庭提供的支援 (PDF) </a>，以帮助您找到托儿服务机构、获取援助以支付托儿服务费用，以及获取其他家庭支持。</li><li>浏览<a href="/zh-hans/childcare/">托儿服务</a>页面以详细了解您身边的托儿服务选择。</li></ul>
+<ul><li>查看<a href="https://files.covid19.ca.gov/pdf/guidance-support-working-families--zh-hans.pdf">支援工薪家庭计划</a>的信息，以帮助您找到托儿所、寻求支付托儿服务的费用，以及指引您至其他的家庭支援服务。</li><li>浏览<a href="/zh-hans/childcare/">托儿服务</a>页面以详细了解您附近有哪些可选择的托儿服务。</li></ul>
 
 
 
@@ -673,14 +673,7 @@
 
 
 
-<ul><li>加州劳工与劳动力发展局 (CA Labor and Workforce Development Agency)：<a href="https://www.labor.ca.gov/coronavirus2019/">面向雇主和工作者的2019新型冠状病毒 (COVID-19) 相关资源</a></li><li>加州就业发展部 (CA Employment Development Department)：<a href="https://www.edd.ca.gov/about_edd/coronavirus-2019.htm">2019年新型冠状病毒 (COVID-19)</a></li><li><a href="https://www.dir.ca.gov/dosh/coronavirus/Health-Care-General-Industry.html">Cal/OSHA COVID-19指引及资源</a></li><li><a href="https://www.dir.ca.gov/dlse/2019-Novel-Coronavirus.htm">新型冠状病毒 (COVID-19)——关于加州劳工部专员办公室 (California Labor Commissioner’s Office) 强制执行的法律的常见问题解答</a></li><li><a href="https://www.dir.ca.gov/dlse/Essential-and-Non-essential-Workers.htm">必要和非必要工作者更新内容</a></li><li>加州公平就业和住房部：<a href="https://www.dfeh.ca.gov/covid-19-resources-and-guidance/">COVID-19资源和指引</a></li><li>加州劳资关系部：<a href="https://www.dir.ca.gov/dwc/Covid-19/Index.html">COVID-19资源和工人补偿</a></li><li>美国劳工部 (U.S. Department of Labor)：<a href="https://www.dol.gov/agencies/whd/ffcra">《家庭优先冠状病毒应对法案》规定的带薪休假</a></li><li>加州公共卫生局：<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">COVID-19检疫指引</a></li><li>加州公共卫生局：<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/ab685.aspx">AB 685 COVID-19工作场所疫情爆发呈报规定</a></li></ul>
-
-
-<p><!--EndFragment--></p>
-
-
-<p></p>
-</div>
+<ul><li>加州劳工与劳动力发展局 (CA Labor and Workforce Development Agency)：<a href="https://www.labor.ca.gov/coronavirus2019/">面向雇主和工作者的2019新型冠状病毒 (COVID-19) 相关资源</a></li><li>加州就业发展部 (CA Employment Development Department)：<a href="https://www.edd.ca.gov/about_edd/coronavirus-2019.htm">2019年新型冠状病毒 (COVID-19)</a></li><li><a href="https://www.dir.ca.gov/dosh/coronavirus/Health-Care-General-Industry.html">Cal/OSHA COVID-19指引及资源</a></li><li><a href="https://www.dir.ca.gov/dlse/2019-Novel-Coronavirus.htm">新型冠状病毒 (COVID-19)——关于加州劳工部专员办公室 (California Labor Commissioner’s Office) 强制执行的法律的常见问题解答</a></li><li><a href="https://www.dir.ca.gov/dlse/Essential-and-Non-essential-Workers.htm">必要和非必要工作者更新内容</a></li><li>加州公平就业和住房部：<a href="https://www.dfeh.ca.gov/covid-19-resources-and-guidance/">COVID-19资源和指引</a></li><li>加州劳资关系部：<a href="https://www.dir.ca.gov/dwc/Covid-19/Index.html">COVID-19资源和工人补偿</a></li><li>美国劳工部 (U.S. Department of Labor)：<a href="https://www.dol.gov/agencies/whd/ffcra">《家庭优先冠状病毒应对法案》规定的带薪休假</a></li><li>加州公共卫生局：<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">COVID-19检疫指引</a></li><li>加州公共卫生局：<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/ab685.aspx">AB 685 COVID-19工作场所疫情爆发呈报规定</a></li></ul>    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/44834.js" async="true" charset="utf-8"></script> </div>
     </div>
   </div>
   <!-- end contentBlock -->
