--- a/zh-hant/workers/index.html
+++ b/zh-hant/workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>工作者</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年2月23日, 下午2:45</p>
+            <p class="small-text">最近更新&nbsp;2021年3月10日, 上午9:52</p>
           
         </div>
       </div>
@@ -269,7 +269,7 @@
 
 
 
-<ul><li>請查看<a href="https://files.covid19.ca.gov/pdf/guidance-support-working-families--zh-hant.pdf">為工薪家庭提供的支援 (PDF) </a>，以幫助您查找托兒服務、尋求托兒服務費用補助，以及為您的家庭提供其他支援。</li><li>造訪<a href="/zh-hant/childcare/">托兒服務</a>網頁，以瞭解您附近的更多托兒服務選項。</li></ul>
+<ul><li>查看<a href="https://files.covid19.ca.gov/pdf/guidance-support-working-families--zh-hant.pdf">為工薪家庭提供的支援</a>相關資訊，以幫助您查找托兒服務、尋求托兒服務費用補助，以及為您的家庭提供其他支援。</li><li>造訪<a href="/zh-hant/childcare/">托兒服務</a>網頁，以瞭解您附近的更多托兒服務選項。</li></ul>
 
 
 
@@ -673,14 +673,7 @@
 
 
 
-<ul><li>加州勞工與勞動力發展署 (CA Labor and Workforce Development Agency)：<a href="https://www.labor.ca.gov/coronavirus2019/">面向雇主和工作者的2019新型冠狀病毒 (COVID-19) 相關資源</a></li><li>加州就業發展部 (CA Employment Development Department)：<a href="https://www.edd.ca.gov/about_edd/coronavirus-2019.htm">2019新型冠狀病毒 (COVID-19)</a></li><li><a href="https://www.dir.ca.gov/dosh/coronavirus/Health-Care-General-Industry.html">Cal/OSHA COVID-19指引及資源</a></li><li><a href="https://www.dir.ca.gov/dlse/2019-Novel-Coronavirus.htm">新型冠狀病毒 (COVID-19) – 關於加州勞工專員辦公室 (California Labor Commissioner's Office) 執行法律的常見問題解答</a></li><li><a href="https://www.dir.ca.gov/dlse/Essential-and-Non-essential-Workers.htm">必要和非必要工作者更新內容</a></li><li>加州公平就業和住房部：<a href="https://www.dfeh.ca.gov/covid-19-resources-and-guidance/">COVID-19資源和指引</a></li><li>查看加州勞資關係：<a href="https://www.dir.ca.gov/dwc/Covid-19/Index.html">COVID-19資源和工人補償</a></li><li>美國勞工部 (U.S. Department of Labor)：<a href="https://www.dol.gov/agencies/whd/ffcra">《家庭優先冠狀病毒應對法》規定的帶薪休假</a></li><li>加州公共衛生局：<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">COVID-19檢疫指引</a></li><li>加州公共衛生局：<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/ab685.aspx">AB 685 COVID-19工作場所疫情爆發呈報規定</a></li></ul>
-
-
-<p><!--EndFragment--></p>
-
-
-<p></p>
-</div>
+<ul><li>加州勞工與勞動力發展署 (CA Labor and Workforce Development Agency)：<a href="https://www.labor.ca.gov/coronavirus2019/">面向雇主和工作者的2019新型冠狀病毒 (COVID-19) 相關資源</a></li><li>加州就業發展部 (CA Employment Development Department)：<a href="https://www.edd.ca.gov/about_edd/coronavirus-2019.htm">2019新型冠狀病毒 (COVID-19)</a></li><li><a href="https://www.dir.ca.gov/dosh/coronavirus/Health-Care-General-Industry.html">Cal/OSHA COVID-19指引及資源</a></li><li><a href="https://www.dir.ca.gov/dlse/2019-Novel-Coronavirus.htm">新型冠狀病毒 (COVID-19) – 關於加州勞工專員辦公室 (California Labor Commissioner's Office) 執行法律的常見問題解答</a></li><li><a href="https://www.dir.ca.gov/dlse/Essential-and-Non-essential-Workers.htm">必要和非必要工作者更新內容</a></li><li>加州公平就業和住房部：<a href="https://www.dfeh.ca.gov/covid-19-resources-and-guidance/">COVID-19資源和指引</a></li><li>查看加州勞資關係：<a href="https://www.dir.ca.gov/dwc/Covid-19/Index.html">COVID-19資源和工人補償</a></li><li>美國勞工部 (U.S. Department of Labor)：<a href="https://www.dol.gov/agencies/whd/ffcra">《家庭優先冠狀病毒應對法》規定的帶薪休假</a></li><li>加州公共衛生局：<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">COVID-19檢疫指引</a></li><li>加州公共衛生局：<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/ab685.aspx">AB 685 COVID-19工作場所疫情爆發呈報規定</a></li></ul>    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/44834.js" async="true" charset="utf-8"></script> </div>
     </div>
   </div>
   <!-- end contentBlock -->
