--- a/education/index.html
+++ b/education/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Education</h1>
           
-            <p class="small-text">Last updated&nbsp;February 26, 2021 at 12:16 PM</p>
+            <p class="small-text">Last updated&nbsp;March 11, 2021 at 9:56 AM</p>
           
         </div>
       </div>
@@ -182,7 +182,7 @@
 
 
 
-<p>Educators and childcare providers under age 65 will be able to book an appointment on <a href="https://myturn.ca.gov/">myturn.ca.gov</a> with a special code. The State of California is working with local education and childcare organizations to distribute these codes. Learn more about the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/K-12_Vaccines_Overview.pdf">K-12 school staff and childcare vaccine allocation plan</a>.</p>
+<p>Educators and childcare providers under age 65 will be able to&nbsp;book an appointment on <a href="https://myturn.ca.gov/">myturn.ca.gov</a> with a special code. The State of California is working with local education and childcare organizations to distribute these codes. Learn more about the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/K-12_Vaccines_Overview.pdf">K-12 school staff and childcare vaccine allocation plan</a>.</p>
 
 
 
@@ -230,11 +230,11 @@
 
 
 
-<p>California released <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">guidance to help K-12<span class="pdf-link-icon no-underline-icon" aria-hidden="true">PDF</span></a> education leaders meet the needs of all students affected by school closures, with an emphasis on assisting low-income children and those with disabilities.&nbsp;</p>
+<p>California released <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">guidance to help K-12</a> education leaders meet the needs of all students affected by school closures, with an emphasis on assisting low-income children and those with disabilities.&nbsp;</p>
 
 
 
-<p>The CDC has also issued recommendations to resume safe, in-person instruction. See how the CDC guidance compares to the California Department of Public Health’s in the <a href="https://files.covid19.ca.gov/pdf/CDC-California-schools-guidance-crosswalk--en.pdf">CDC-California K-12 Schools Guidance Crosswalk<span class="pdf-link-icon no-underline-icon" aria-hidden="true">PDF</span></a> .</p>
+<p>The CDC has also issued recommendations to resume safe, in-person instruction. See how the CDC guidance compares to the California Department of Public Health’s in the <a href="https://files.covid19.ca.gov/pdf/CDC-California-schools-guidance-crosswalk--en.pdf">CDC-California K-12 Schools Guidance Crosswalk</a> .</p>
 
 
 
