Reverted vaccines.html.

--- a/pages/wordpress-posts/vaccines.html
+++ b/pages/wordpress-posts/vaccines.html
@@ -545,7 +545,7 @@ addtositemap: true
             <li data-label="chartTitleCounty">People with at least one dose of vaccine administered by race and ethnicity in [REGION]</li>
             <li data-label="legendLabelVaccines">% of vaccines administered</li>
             <li data-label="legendLabelPopulation">% of state population</li>
-            <li data-label="chartDataLabel">Updated {PUBLISHED_DATE} with data from {LATEST_ADMINISTERED_DATE}. Note: “Other” means those who don’t fall under any listed race or ethnicity.  “Unknown” includes those who declined to state or whose race and ethnicity information is missing.</li>
+            <li data-label="chartDataLabel">Note: “Other” means those who don’t fall under any listed race or ethnicity.  “Unknown” includes those who declined to state or whose race and ethnicity information is missing.</li>
           </ul>
         </cagov-chart-vaccination-groups-race-ethnicity>
 
@@ -555,7 +555,7 @@ addtositemap: true
             <li data-label="chartTitleCounty">People with at least one dose of vaccine administered by age in [REGION]</li>
             <li data-label="legendLabelVaccines">% of vaccines administered</li>
             <li data-label="legendLabelPopulation">% of state population</li>
-            <li data-label="chartDataLabel">Updated {PUBLISHED_DATE} with data from {LATEST_ADMINISTERED_DATE}.</li>
+            <li data-label="chartDataLabel"></li>
           </ul>
         </cagov-chart-vaccination-groups-age>
         
@@ -565,7 +565,7 @@ addtositemap: true
             <li data-label="chartTitleCounty">People with at least one dose of vaccine administered by gender in [REGION]</li>
             <li data-label="legendLabelVaccines">% of vaccines administered</li>
             <li data-label="legendLabelPopulation">% of state population</li>
-            <li data-label="chartDataLabel">Updated {PUBLISHED_DATE} with data from {LATEST_ADMINISTERED_DATE}. “Unknown/undifferentiated” includes those who declined to state, whose gender information is missing, or who identify as transgender, gender non-binary, gender queer or intersex.</li>
+            <li data-label="chartDataLabel">“Unknown/undifferentiated” includes those who declined to state, whose gender information is missing, or who identify as transgender, gender non-binary, gender queer or intersex.</li>
           </ul>
         </cagov-chart-vaccination-groups-gender>
     </div>
