--- a/education/index.html
+++ b/education/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Education</h1>
           
-            <p class="small-text">Last updated&nbsp;March 11, 2021 at 9:56 AM</p>
+            <p class="small-text">Last updated&nbsp;March 11, 2021 at 11:29 AM</p>
           
         </div>
       </div>
@@ -242,7 +242,7 @@
 
 
 
-<p>Interim <a href="https://files.covid19.ca.gov/pdf/guidance-higher-education--en.pdf">guidance for institutions of higher education<span class="pdf-link-icon no-underline-icon" aria-hidden="true">PDF</span></a> is available to help institutions and their communities plan and prepare to resume in-person instruction.</p>
+<p>Interim <a href="https://files.covid19.ca.gov/pdf/guidance-higher-education--en.pdf">guidance for institutions of higher education</a> is available to help institutions and their communities plan and prepare to resume in-person instruction.</p>
 
 
 
@@ -305,7 +305,7 @@
             <p>K-12th grade schools can reopen for in-person instruction in accordance with the <a href="https://schools.covid19.ca.gov/">K-12 School Guidance<span class="pdf-link-icon no-underline-icon" aria-hidden="true">PDF</span></a>. K-6th grade schools may open once their county has a case rate of less than 25 cases per 100,00 (adjusted) and if schools have followed the other processes for school re-opening outlined in the guidance. </p>
 <p>Middle and High Schools can open once the county is in the Substantial (red) tier and have also followed the school re-opening guidance. The first day schools are eligible for re-opening under either criterion is the day after the county meets the relevant metric (case rate of less than 25, or being in the Substantial (red) tier) of the <a href="https://covid19.ca.gov/safer-economy/" data-type="URL" data-id="https://covid19.ca.gov/safer-economy/">Blueprint for a Safer Economy</a> (published weekly on Tuesdays, so schools are eligible to re-open on Wednesday). </p>
 <p>Schools in counties that have met the relevant criteria for school re-opening per the K-12 Guidance have a three-week period to open, starting the day the county meets the criterion for re-opening, even if the county stops meeting the criterion during that window (i.e., case rate is ≥25 in a subsequent calculation or the county assignment goes back to the Widespread (purple) tier during the window). The goal of the three-week window is to facilitate calm and safe school re-openings.</p>
-<p>Learn more about <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">guidance for schools<span class="pdf-link-icon no-underline-icon" aria-hidden="true">PDF</span></a> .</p>
+<p>Learn more about <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">guidance for schools</a>.</p>
 
                   </div>
                 </div>
