Update page - industry-guidance.html 647b2d72b11ba4d989fb64e907fccaa68ba9f545

--- a/industry-guidance/index.html
+++ b/industry-guidance/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Industry guidance to reduce risk</h1>
           
-            <p class="small-text">Last updated&nbsp;March 11, 2021 at 2:38 PM</p>
+            <p class="small-text">Last updated&nbsp;March 11, 2021 at 2:49 PM</p>
           
         </div>
       </div>
@@ -1996,9 +1996,9 @@
 <p>The interim capacity limits below are effective March 13, 2021. The guidance is in the process of being updated. Check CDPH’s <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Dimmer-Framework-September_2020.pdf">activity and business tiers table</a> for information about these changes.</p>
 <p>Tier status</p>
 <p>Widespread (purple)</p>
-<ul><li>Outdoor only with modifications</li><li>Reservations required</li><li>90-minute time limit</li><li>Seating/tables only</li></ul>
+<ul><li>Outdoor only with modifications</li><li>Reservations required</li><li>90-minute time limit</li><li>Seating/tables only</li><li>Limited hours (service for on-site consumption close by 8:00 pm)</li></ul>
 <p>Substantial (red)</p>
-<ul><li>Outdoor only with modifications</li><li>Reservations required</li><li>90-minute time limit</li><li>Seating/tables only</li></ul>
+<ul><li>Outdoor only with modifications</li><li>Reservations required</li><li>90-minute time limit</li><li>Seating/tables only</li><li>Limited hours (service for on-site consumption close by 8:00 pm)</li></ul>
 <p>Moderate (orange)</p>
 <ul><li>Indoor with modifications</li><li>Capacity must be limited to 25% or 100 people, whichever is less</li></ul>
 <p>Minimal (yellow)</p>
