Update page - vaccines.html c13c026f204ef845a9e140d5e4f8321432a1ca1f

--- a/v2-state-dashboard/index.html
+++ b/v2-state-dashboard/index.html
@@ -553,7 +553,7 @@
       </div>
       <div class="row">
         <!-- newly added -->
-        <div class="toggle-group-container col-sm-12 col-lg-10 px-3 
+        <div class="toggle-group-container d3-charts col-sm-12 col-lg-10 px-3 
  mx-auto d3-charts">
           <div id="gender-graph" class="toggle-group-element" style="display:none">
             <div id="genderGroupChartContainer">
